Design: Fix header size on smaller screens

--- a/styles/brendan.css
+++ b/styles/brendan.css
@@ -200,7 +200,7 @@ ul.brendan_gallery a:active {
 @media only screen and (max-width: 750px) {
 
   .brendan header {
-    height: 150px;
+    height: 100px;
   }
 
   .brendan header h1 {
